FileUpload, added validation support
