# src/GovUK.Dfe.FlexForms.Application/Services/IFileValidationModeResolver.cs
@@ -1,0 +1,8 @@
+using GovUK.Dfe.CoreLibs.Contracts.ExternalApplications.Enums;
+
+namespace GovUK.Dfe.FlexForms.Application.Services;
+
+public interface IFileValidationModeResolver
+{
+    FileValidationMode Resolve(Guid? templateId);
+}
